--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=DESKTOP-9FV4M39;Database=CarRental;Trusted_Connection=true;TrustServerCertificate=true"
   },
   "JWTOptions": {
-    "Issuer": "RegisterLoginJWTBCSTO16",
+    "Issuer": "CarRentalAPI",
     "Audience": "ClientUi",
     "Secret": "My top secret secret keyMy top secret secret keyMy top secret secret keyMy top secret secret keyMy top secret secret keyMy top secret secret keyMy top secret secret keyMy top secret secret keyyyy",
     "accessTokenExpirationDays": 1,
